--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= webpackConfig.name %></title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title><%= webpackConfig.name %></title>
+</head>
+
+<body>
+  <!-- <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+  <style>
+    li {
+      border: 1px solid #000;
+    }
+  </style>
+  <script>
+    var ul = document.querySelector("ul");
+    ul.addEventListener("mousedown", mouseHandler);
+    function mouseHandler(e) {
+      debugger;
+      e.preventDefault();
+      if (e.target.nodeName !== "LI") return;
+      var arr = Array.from(ul.children);
+      var index = arr.indexOf(e.target);
+      console.log(index);
+    }
+
+    let arr = [1,24,0,55,0];
+    let result = [];
+    for (let i = 0; i < arr.length; i++) {
+      if(arr[i] !== 0){
+        result.push(arr[i])
+      }
+    }
+  </script>
+
+ -->
+
+
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
