--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Descripttion: DOP
+ * @version: 1.0.0
+ * @Author: Author
+ * @Date: 2020-07-27 17:29:05
+ * @LastEditors: konglingzhan
+ * @LastEditTime: 2020-08-19 16:34:38
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,5 +19,39 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      function test(o) {
+            o.age = 50;
+            // o = {
+            //     name: 'li si',
+            //     age: 100
+            // }
+            o = null;
+            return o;
+        }
+        
+        const boy = {
+            name: 'zhang san',
+            age: 16
+        }
+        const boy1 = test(boy)
+        
+        console.log(boy)
+        console.log(boy1)
+
+
+
+        function changeStuff(a,b,c){
+          a = a * 10;
+          b.item = "changed";
+          c = {item:"changed"};
+        }
+        var num = 10;
+        var obj1 = {item: "unchanged"}; // unchanged
+        var obj2 = {item: "unchanged"}; // unchanged
+        changeStuff(num, obj1, obj2);
+        console.log(obj1.item); // changed
+        console.log(obj2.item); // unchanged
+    </script>
   </body>
 </html>
