--- a/public/index.html
+++ b/public/index.html
@@ -3,55 +3,74 @@
  * @version: 1.0.0
  * @Author: Author
  * @Date: 2020-07-27 17:29:05
- * @LastEditors: konglingzhan
- * @LastEditTime: 2020-08-19 16:34:38
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-08-21 13:05:34
 -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= webpackConfig.name %></title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script>
-      function test(o) {
-            o.age = 50;
-            // o = {
-            //     name: 'li si',
-            //     age: 100
-            // }
-            o = null;
-            return o;
-        }
-        
-        const boy = {
-            name: 'zhang san',
-            age: 16
-        }
-        const boy1 = test(boy)
-        
-        console.log(boy)
-        console.log(boy1)
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title><%= webpackConfig.name %></title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <script>
+    // function test(o) {
+    //       o.age = 50;
+    //       // o = {
+    //       //     name: 'li si',
+    //       //     age: 100
+    //       // }
+    //       o = null;
+    //       return o;
+    //   }
+
+    //   const boy = {
+    //       name: 'zhang san',
+    //       age: 16
+    //   }
+    //   const boy1 = test(boy)
+
+    //   console.log(boy)
+    //   console.log(boy1)
 
 
 
-        function changeStuff(a,b,c){
-          a = a * 10;
-          b.item = "changed";
-          c = {item:"changed"};
-        }
-        var num = 10;
-        var obj1 = {item: "unchanged"}; // unchanged
-        var obj2 = {item: "unchanged"}; // unchanged
-        changeStuff(num, obj1, obj2);
-        console.log(obj1.item); // changed
-        console.log(obj2.item); // unchanged
-    </script>
-  </body>
+    //   function changeStuff(a,b,c){
+    //     a = a * 10;
+    //     b.item = "changed";
+    //     c = {item:"changed"};
+    //   }
+    //   var num = 10;
+    //   var obj1 = {item: "unchanged"}; // unchanged
+    //   var obj2 = {item: "unchanged"}; // unchanged
+    //   changeStuff(num, obj1, obj2);
+    //   console.log(obj1.item); // changed
+    //   console.log(obj2.item); // unchanged
+
+
+
+    // ! function () {
+    //   this.length = 10;
+    //   debugger;
+    //   var fn = function () {
+    //       this;
+    //       debugger;
+    //       console.log(this.length); //输出多少？
+    //     },
+    //     arr = [fn, 'hello layui'];
+    //   fn.length = 100;
+    //   arr[0]();
+    // }();
+
+  </script>
+</body>
+
 </html>
